Fix overflowing li's in chzn-drop.
For https://unisubs.sifterapp.com/projects/12298/issues/550756/comments

--- a/media/less/v1.less
+++ b/media/less/v1.less
@@ -1702,6 +1702,10 @@ ol.subtitles {
             margin-left: -5px !important;
             margin-top: -1px !important;
             z-index: 50;
+
+            li {
+                width: 100%;
+            }
         }
     }
 }
